# minesweeper_emscripten

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.bat
src/: Minesweeper.cpp  Minesweeper.h  main.cpp  test.js  tsconfig.json
test_cpp/: minesweeper_test.cpp
test_ts/: minesweepr_test.ts  package-lock.json  package.json  tsconfig.json
